--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi
+fastapi[all]
 uvicorn
 tzdata
 pydantic
 redis>=5.0
 python-dotenv
 twilio
-httpx
 websockets>=12.0
-requests
+httpx
+python-multipart
